2010-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* man/DiscountCurve.Rd: Uncomment futures entries as there are
	numerical issues (in QuantLib) with the spline curve fit when present

2010-04-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/*.cpp: Suppress a few g++ warnings

	* src/calendar.cpp: Added South Korea and Brazil

2010-04-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runitOptions.R: Updated binary option test

2010-04-05  Khanh Nguyen  <knguyen@cs.umb.edu>

	* R/hullWhiteCalibration.R: added Hull-White calibration
	* src/hullwhite.cpp: added Hull-White calibration

2010-02-12  Khanh Nguyen  <knguyen@cs.umb.edu>

	* R/*,src/*: Remove some deprecated fixed income code
	* tests/*: Remove corresponding tests

2010-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Some small cleanups

2010-01-22  Khanh Nguyen <knguyen@cs.umb.edu>

	* NAMESPACE: Added, filled with functions and methods

	* R/*Bond.R: add default values to bond functions, especially the date
	parameters (dayCounter, settlement days, compounding frequency,..)
	so that it is less confusing when using the functions.
	* man/*Bond.Rd: idem
	* New examples that use default values for bonds.

2010-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.2 which works with QuantLib 0.9.9
	  (as well as with the brand-new first beta for QuantLib 1.0.0)

	* src/Makefile.win: Keep QL 0.9.9 hard-coded until 1.0.0 is out

2010-01-14  Khanh Nguyen <knguyen@cs.umb.edu>

	* pkg/R/calendars.R: Fix generic function issue with advance

	* src/dayCounter.cpp: Added dayCounter functions
	* pkg/R/dayCounter.R: idem
	* man/dayCount.R: idem
	* man/yearFraction.R: idem
	* man/advance.R: idem

2010-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/asian.cpp: updated for Rcpp (>= 0.7.0), switched to explicit
	  Rf_error() and Rf_length() where needed with R_NO_REMAP defined
	* src/barrier_binary.cpp: idem
	* src/bermudan.cpp: idem
	* src/bonds.cpp: idem
	* src/discount.cpp: idem